objects/FieloEE__Level__c.object
<CustomObject>
    <description>Level of a member in your program. Classic examples of levels are Gold, Platinum, etc.</description>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description of this level.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description of this level.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloEE__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the level active.</description>
        <inlineHelpText>Check this box in order to make this level active.</inlineHelpText>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <description>The hierarchy order of levels.</description>
        <inlineHelpText>Set the hierarchical order for the levels.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this level belongs.</description>
        <inlineHelpText>Select the program to which this level belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>FieloEE__All_Levels</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Program__c</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>FieloEE__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Levels</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>